syntax = "proto3";

package commentpb;
option go_package = "./commentpb";

// QFS
message CreatePackingCommentRequest {
    int32 equipment_checking_id = 1;
    string mr_comment = 2;
    int32 mr_id = 3;
}
message CreatePackingCommentResponse {
    int64 id = 1;
}

// QFS
service CommentService {
    rpc CreatePackingComment(CreatePackingCommentRequest) returns (CreatePackingCommentResponse) {};
}